[package]
name = "sensorstream"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bytemuck = { version = "1.20.0", features = ["derive", "min_const_generics"] }
anchor-lang =  {version = "0.31.1", features = ["init-if-needed"]}
